--- a/style2.css
+++ b/style2.css
@@ -1,53 +1,31 @@
-p1{
-	font-size: default;
-	font-family: 'Roboto Mono', monospace;
-	color: black;
-	text-decoration: underline;
-    
-}
-
-span.text{
-
-  margin-top: 200px;
-
-}
-
-h1{
-	font-family: 'Abril Fatface', cursive;
-    color: orange;
-    font-size: 80px;
-    width: 600px;
-    
-
-}
-
-a:link    {
-color:white;
-text-decoration: none;
-}
-a:visited {
-	color:white;
-	text-decoration: none;
-}
-
-span {
-		color: white;
-		padding: 5px;
-		font-size: 20px;
-		position: absolute;
-		left: 50%;
+div.top{
+   background-color: lightblue;
+   height: 250px;;
+   max-width:1330px;
 }
 
 .Job {
-margin-left: 400px;
+padding-left: 400px;
+color: white;
+		padding: 5px;
+		font-size: 20px;
+		
 }
 
 .Skills{
-	margin-left: 330px;
+	padding-left: 630px;
+	color: white;
+		padding: 5px;
+		font-size: 20px;
+		
 }
 
 .Home{
-	margin-left: 540px;
+	padding-left: 840px;
+	color: white;
+		padding: 5px;
+		font-size: 20px;
+		
 }
 
 .Home:hover {
@@ -60,17 +38,55 @@ margin-left: 400px;
 .Skills:hover{
 	opacity: .5;
 }
-div.menu{
-   background-color: lightblue;
-   height: 250px;;
-   width: 100%;
+
+
+span.text{
+	
+	
+	
+	font-size: 30px;
+	font-family: 'Roboto Mono', monospace;
+	color: black;
+	text-decoration: underline;
+	
+	
+
 }
 
-.me{
-	font-size: 60px;
+div.right{
+	
+	width: 600px;
+	margin-left : 700px;
 
 	
-	margin-top: -130px;
+}
+
+
+.highlight{
+	color: orange;
+	font-size: 88px;
+    font-family: 'Bree Serif', serif;
+	padding-left : 700px;
+
+
+}
+
+
+a:link    {
+color:white;
+text-decoration: none;
+}
+a:visited {
+	color:white;
+	text-decoration: none;
+}
+
+
+
+
+.me{
+	margin-top : 200px;
+	font-size: 60px;
     margin-left: 40%;
     font-family: 'PT Sans', sans-serif;
     color: white;
@@ -81,14 +97,6 @@ div.menu{
 
 }
 
-
-.highlight{
-	color: orange;
-	font-size: 28px;
-     font-family: 'Bree Serif', serif;
-
-
-}
 
 
 .topic{
@@ -130,25 +138,10 @@ small{
 }
 
 
-
-#pic{
-       position: relative;	
-		left: 110px;
-}
-
 }
 
 
-h2{
-	color: grey;
-	
-  font-family: 'Ubuntu Condensed', sans-serif;
-  font-size: 20px;
-  letter-spacing: 2px;
-  line-height: 1.8;
-  margin-left: 35%;
-	
-}
+
 
 .download{
 	
